womenscenter.org/css/retrofit.css
body {
		margin: 1em;
	}
/*tablets and small desktop windows*/
@media (max-width: 1000px) {

    #wrapper {
        width: 100%;
    }

    .main {
    	background-size: 100% 100%;
    }

    #header {
    	height: 10em;
		background-position: 100% 0%;
		background-size: 100% 85%;
		width: 100%;
    }
    /*After I have this version clean, I want to make a smaller phone version that puts the careline
    underneath the logo*/
    .white {
    	background-position: 0% 0%;
		background-size: 100% 100%;
		width: 63%;
		height: 6em;
    	margin: 1em 0em 0em 1.2em;
    	position: relative;
    	float: left;
    }

    .embelem {
    	background-size: auto 100%;
    	height: 150%;
		background-position: 0% 20%;
		margin: -3% 1% 1% 3%;
    	width: 16%;
    }

    .white .logo {
    	height: 100%;
		width: 100%;
		background-position: 60% 50%;
		background-size: 82%;
		margin: 0;
    }

    #header .careline {
		font-size: 0.8em;
		margin: 3em 2em 0em 0em;
		width: 27%;
	}

    .slidewrap {
        overflow: hidden;
    }

    #header div.menu {
    	position: relative;
    	margin: 1em 0 0 0;
    	width: 100%;
        float: left;
        height: auto;
        background: #7a428d; /* Old browsers */
        background: -moz-linear-gradient(top, #7a428d 0%, #703d81 27%, #663777 64%, #60346f 100%); /* FF3.6+ */
        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7a428d), color-stop(27%,#703d81), color-stop(64%,#663777), color-stop(100%,#60346f)); /* Chrome,Safari4+ */
        background: -webkit-linear-gradient(top, #7a428d 0%,#703d81 27%,#663777 64%,#60346f 100%); /* Chrome10+,Safari5.1+ */
        background: -o-linear-gradient(top, #7a428d 0%,#703d81 27%,#663777 64%,#60346f 100%); /* Opera 11.10+ */
        background: -ms-linear-gradient(top, #7a428d 0%,#703d81 27%,#663777 64%,#60346f 100%); /* IE10+ */
        background: linear-gradient(to bottom, #7a428d 0%,#703d81 27%,#663777 64%,#60346f 100%); /* W3C */
        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7a428d', endColorstr='#60346f',GradientType=0 ); /* IE6-9 */
        background-color: #6D3C7F;
        
        -moz-box-shadow: 0px 2px 4px #361E3F;
        
        box-shadow: 0px 2px 4px #361E3F;
        
        box-shadow: 0px 2px 4px #361E3F;
    }

    .menu .module ul.menu {
    	margin: -0.7% 5% 0 12%;
    }

    .menu .module ul.menu li {
    	margin-top: 0.5em;
    }
    /*how do I make the menu items centered?*/

    div.modheader.standard {
    	margin: 0em 1.5% -2% 1.5%;
    	height: 1.5em;
    }

    .homeTop {
    	background-size: 100% 100%;
		margin: 0;
		background-position: 100% 100%;
		width: 100%;
		height: 23em;
    }

    .homeTopContainer {
    	width: 97%;
    }

    .c700.first {
    	width: 100%;
    	margin-bottom: 1em;
        float: right;
    }

    .c220.first {
        width: 100%;
    }

    .c220.left {
        height: auto;
    	width: 96%;
    	font-size: 14px;
        text-align: center;
    }

    .modulehomeSideMenu {
    	height: 100%;
    	overflow: hidden;
    }

    .modulehomeSideMenu ul.menu {
    	width: 100%;
    	font-size: 85%;
    }

    .modulehomeSideMenu ul li {
    	float: left;
        width: 33%;
    }

    .modulehomeSideMenu ul li span.separator {
    	display: none;
    }

    .c940.first {
    	width: 100%;
    }

    .c460.left.homepage {
    	width: 100%;
    	margin: 0;
    }

    .c700.left {
        width: 90%;
        margin-top: 5%;
    }

    .bottom {
    	background-size: 100%;
    	background-position: 100% 100%;
    }

    .modulecallus, .modulemakeappt {
    	margin: 0;
        width: 50%;
    }

    .modulecallus {
        float: left;
    }
    .modulemakeappt {
        float: right;
    }

    .modulecallus p, .modulemakeappt p {
        text-align: center;
    }

    .modulecallus img, .modulemakeappt img {
        width: 200px;
        height: auto;
    }

    .footer {
    	background-size: 100%;
    	width: auto;
    }

    .careline.c380 {
    	font-size: 1.6em;
    	margin: 16px 15px 0 0;
    	width: auto;
    }

    /* John's code*/
    #slidewrap {
        overflow: hidden;
        height: auto !important;
    }

    #slideshow {
        width: 100% !important;
    }

    #slideshow div {
        overflow: auto !important;
        padding-bottom: 31.428571428571% !important;
        height: 0 !important;
        width: 100% !important;
    }

    #slideshow div a, #slideshow div a img {
        left: auto !important;
        right: 0px !important;
        width: 100% !important;
        height: 100% !important;
    }

    #slideshow div a img {
        width: 100% !important;
        height: 100% !important;
    }
    /*end of John's code*/
}
/*tablets*/
@media (max-width: 860px) {

    .homeTop {
        background-image:none;
        height: auto;
    }

    .homeTopContainer .c700.first {
        border-width: 8px;
        border-bottom-color: #491459;
    }

    .c220.first {
        margin: 1em 0;
    }

    .modulevideoButton {
        margin:0;
    }

    .modulehomeSideMenu {
        background: #4a1359; /* Old browsers */
        background: -moz-linear-gradient(top, #4a1359 0%, #7a2293 50%, #491459 99%); /* FF3.6+ */
        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#4a1359), color-stop(50%,#7a2293), color-stop(99%,#491459)); /* Chrome,Safari4+ */
        background: -webkit-linear-gradient(top, #4a1359 0%,#7a2293 50%,#491459 99%); /* Chrome10+,Safari5.1+ */
        background: -o-linear-gradient(top, #4a1359 0%,#7a2293 50%,#491459 99%); /* Opera 11.10+ */
        background: -ms-linear-gradient(top, #4a1359 0%,#7a2293 50%,#491459 99%); /* IE10+ */
        background: linear-gradient(to bottom, #4a1359 0%,#7a2293 50%,#491459 99%); /* W3C */
        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4a1359', endColorstr='#491459',GradientType=0 ); /* IE6-9 */
        border-radius: 10px;
        box-shadow: 0px 1px 14px black;
        padding: 1em;
    }

	.footer {
		/*Replace background image with gradient*/
		background: #86aa46; /* Old browsers */
		background: -moz-linear-gradient(top,  #86aa46 0%, #65803d 3%, #65803d 40%, #5b7437 63%, #4b5f2d 100%); /* FF3.6+ */
		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#86aa46), color-stop(3%,#65803d), color-stop(40%,#65803d), color-stop(63%,#5b7437), color-stop(100%,#4b5f2d)); /* Chrome,Safari4+ */
		background: -webkit-linear-gradient(top,  #86aa46 0%,#65803d 3%,#65803d 40%,#5b7437 63%,#4b5f2d 100%); /* Chrome10+,Safari5.1+ */
		background: -o-linear-gradient(top,  #86aa46 0%,#65803d 3%,#65803d 40%,#5b7437 63%,#4b5f2d 100%); /* Opera 11.10+ */
		background: -ms-linear-gradient(top,  #86aa46 0%,#65803d 3%,#65803d 40%,#5b7437 63%,#4b5f2d 100%); /* IE10+ */
		background: linear-gradient(to bottom,  #86aa46 0%,#65803d 3%,#65803d 40%,#5b7437 63%,#4b5f2d 100%); /* W3C */
		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#86aa46', endColorstr='#4b5f2d',GradientType=0 ); /* IE6-9 */


		/*Original gradient - diagonal*/
		/*background: #4b5f2d; /* Old browsers */
		/*background: -moz-linear-gradient(-45deg,  #4b5f2d 0%, #5b7437 10%, #5b7437 91%, #4b5f2d 100%); /* FF3.6+ */
		/*background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#4b5f2d), color-stop(10%,#5b7437), color-stop(91%,#5b7437), color-stop(100%,#4b5f2d)); /* Chrome,Safari4+ */
		/*background: -webkit-linear-gradient(-45deg,  #4b5f2d 0%,#5b7437 10%,#5b7437 91%,#4b5f2d 100%); /* Chrome10+,Safari5.1+ */
		/*background: -o-linear-gradient(-45deg,  #4b5f2d 0%,#5b7437 10%,#5b7437 91%,#4b5f2d 100%); /* Opera 11.10+ */
		/*background: -ms-linear-gradient(-45deg,  #4b5f2d 0%,#5b7437 10%,#5b7437 91%,#4b5f2d 100%); /* IE10+ */
		/*background: linear-gradient(135deg,  #4b5f2d 0%,#5b7437 10%,#5b7437 91%,#4b5f2d 100%); /* W3C */
		/*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4b5f2d', endColorstr='#4b5f2d',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */

		/*round the corners to make it look like the button*/
		-webkit-border-radius: 11px;
		-moz-border-radius: 11px;
		border-radius: 11px;

		box-shadow: 1px 2px 7px black;
		height: 12em;
	}
	/*need to somehow get rid of these importants*/
	.title.c380 {
		margin: 0.8em 0 0 0.8em !important;
	}

	.careline.c380 {
		font-size: 17px;
	}

	.c140 {
		margin: 1.5em !important;
	}

	.c140.left {
		width: auto;
	} 

	.footer .alignright {
		float: right;
		width: 18%;
	}
}
/*big phones and small tablets*/
@media (max-width: 715px) {
    #header {
        height: 12em;
    }

    .white {
        width: 96%;
    margin: 3% 2% 0 2%;
    }

    #header .careline {
        margin: 0 5%;
        float: right;
        width: auto;
    }

    #header .careline .caretitle {
        float: left;
        font-size: 18px;
    }
    
    span.carenumber {
        margin-left: 0.5em;
        width: auto;
        float: left;
        font-size: 16px !important;
    }

    #header .menu .module ul.menu {
        margin: -0.7% 5% 0 4%;
    }

    #header div.menu {
        margin: 0;
    }

    div.modheader.standard {
        margin: -1.6em 1.5% -2% 1.5%;
    }
    
    div.content {
        margin-top: 2em;
    }

    /* specifically for the contact page images*/
    .modulecallus, .modulemakeappt {
        width: 48%;
    }
    
    h5 img, h4 img {
        width: 100%;
        height: auto;
    }

    .footer {
        height: 17em;
    }

    .footer .title.c380 {
        width: auto;
    }

    .footer .careline.c380 {
        font-size: 14px;
        float: left;
        margin: 0 10em 0 2em;
    }

    .footer .alignright {
        width: 90%;
        font-size: 12px;
    }
}

/*for footer text-wrapping*/
@media (max-width: 570px) {
    .c140 {
        margin-right: 0em !important;
        width: 30%;
        font-size: 11px;
    }

}

/*iphones, etc.*/
@media (max-width: 475px) {

    body {
        margin: 0 0.25em;
    }

    .white {
        margin-top: 4%;
        z-index: 3;
    }

    #header .careline {
        z-index: 100;
        position: relative;
    }

    #header .careline span {
        float: left;
        margin: 0 5px 0 0;
    }
    
    div.menu {
        z-index: 2;
        margin-bottom: 5em;
    }

    .modulehomeSideMenu {
        padding: 1em 1em 0.5em 1em;
        width: 100%;
        float: right;
    }

    .modulehomeSideMenu ul.menu {
        width: 70%;
        margin-left: 15%;
    }

    .modulehomeSideMenu ul.menu li {
        float: none;
        width: 100%;
    }

    .modulehomeSideMenu ul li span.separator {
        display: inherit;
    }

    .modulecallus, .modulemakeappt {
        width: 50%;
        float: left;
        margin-left: 0;
    }

    .modulecallus img, .modulemakeappt img {
        width: 100%;
        height: auto;
    }

    .c220.left {
        width: 100%;
        margin: 0;
    }

    .footer {
        height: 34em;
    }
    
    .title.c380 {
        font-size: 19px;
    }

    .footer .careline.c380 {
        margin-right: 0;
        font-size: 12px;
    }

    .footer .c140 {
        width: 100%;
    }
}

@media (max-width: 365px) {

    #header .careline {
        margin-bottom: 4px;
    }
    
    #header .careline span.carenumber, span.caretitle {
        font-size: 12px !important;
    }
    
    .modulecallus, .modulemakeappt {
        width: 100%;
    }
    
    .footer {
        height: 36em;
    }
}

@media (max-width: 318px) {
    .white {
        height: 5em;
    }
    
    .menu {
        font-size: 12px;
    }
    
    ul.menu li a {
        font-size: 15px;
    }
    
    div.content {
        margin-top: 1em;
    }
    
    div.content h1 {
        font-size: 20px;
    }
    
    div.content li {
        font-size: 15px;
    }
    
    div.content p {
        font-size: 12px;
    }

}

@media (max-width: 300px) {  
    .footer {
        height: 38em;
    }
}

